--- a/ui/package.json
+++ b/ui/package.json
@@ -3,16 +3,42 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --ignore-path .gitignore . --max-warnings=0",
+    "lint:fix": "eslint --ignore-path .gitignore . --fix",
+    "typecheck": "tsc --project ./tsconfig.json --noEmit",
     "test": "vitest"
   },
-  "license": "Apache-2.0",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0"
+  },
+  "packageManager": "pnpm@8.1.0",
   "dependencies": {
     "@bufbuild/connect": "0.8.6",
     "@bufbuild/connect-query": "0.2.1",
     "@bufbuild/protobuf": "1.2.0",
-    "vite": "^4.3.9"
-  },
-  "devDependencies": {
+    "@tanstack/react-query": "^4.29.5",
+    "antd": "^5.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "vitest": "^0.31.1"
   }
 }
