--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "less": "^4.1.3",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
     "vite": "^4.3.2",
@@ -34,8 +35,12 @@
     "@bufbuild/connect": "0.8.6",
     "@bufbuild/connect-query": "0.2.1",
     "@bufbuild/protobuf": "1.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.29.5",
     "antd": "^5.4.5",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
