--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -25,7 +27,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-refresh": "^0.3.4",
     "less": "^4.1.3",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "vite": "^4.3.2",
     "vite-tsconfig-paths": "^4.2.0"
@@ -41,6 +45,7 @@
     "@tanstack/react-query": "^4.29.5",
     "antd": "^5.4.5",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
