--- a/ui/package.json
+++ b/ui/package.json
@@ -45,7 +45,7 @@
     "@tanstack/react-query": "^4.29.5",
     "antd": "^5.4.5",
     "classnames": "^2.3.2",
-    "moment": "^2.29.4",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
