--- a/ui/package.json
+++ b/ui/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@bufbuild/connect": "0.8.6",
     "@bufbuild/connect-query": "0.2.1",
+    "@bufbuild/connect-web": "^0.9.0",
     "@bufbuild/protobuf": "1.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
