--- a/charts/argocd-kit/Chart.yaml
+++ b/charts/argocd-kit/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: kargo-kit
-description: Kargo Kit installs resources required by clusters that host Kargo resources with the Kargo controller running elsewhere
+name: argocd-kit
+description: Argo CD Kit installs resources required by clusters that host an Argo CD control plane that is integrated with a Kargo controller running elsewhere
 type: application
 version: 0.1.0
 sources:
