--- a/charts/kargo-kit/templates/cluster-role-bindings.yaml
+++ b/charts/kargo-kit/templates/cluster-role-bindings.yaml
@@ -1,29 +1,29 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kargo-kit.fullname" . }}-api
+  name: {{ include "kargo-kit.fullname" . }}-kargo-api
   labels:
     {{- include "kargo-kit.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "kargo-kit.fullname" . }}-api
+  name: {{ include "kargo-kit.fullname" . }}-kargo-api
 subjects:
 - kind: ServiceAccount
-  namespace: {{ .Values.rbac.apiServiceAccount.namespace }}
-  name: {{ .Values.rbac.apiServiceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+  name: {{ include "kargo-kit.fullname" . }}-kargo-api
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kargo-kit.fullname" . }}-controller
+  name: {{ include "kargo-kit.fullname" . }}-kargo-controller
   labels:
     {{- include "kargo-kit.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "kargo-kit.fullname" . }}-controller
+  name: {{ include "kargo-kit.fullname" . }}-kargo-controller
 subjects:
 - kind: ServiceAccount
-  namespace: {{ .Values.rbac.controllerServiceAccount.namespace }}
-  name: {{ .Values.rbac.controllerServiceAccount.name }}
+  namespace: {{ .Release.Namespace }}
+  name: {{ include "kargo-kit.fullname" . }}-kargo-controller
